# admin_meekrotik

./: .dockerignore  .env.example  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_VPS.md  Dockerfile  GEMINI.md  README.md  SECURITY.md  docker-compose.yml  init.sql  vps-nginx.conf
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260512_000001_port_manager.rs
src/: main.rs
src/entities/: audit_logs.rs  mikhmon_users.rs  mod.rs  port_rules.rs  users.rs
src/middleware/: auth.rs
src/routes/: audit.rs  auth.rs  mod.rs  rules.rs  users.rs
src/system/: iptables.rs
ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css
ui/src/components/: Layout.tsx
ui/src/pages/: AuditLogs.tsx  Dashboard.tsx  Login.tsx  PortManager.tsx  Settings.tsx
